Add high propensity detector