@@ -5,9 +5,7 @@ import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.digitalpower.model.WebData;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
+import java.util.*;
 
 public class WebDataProducer {
 
@@ -16,12 +14,13 @@ public class WebDataProducer {
     private final KafkaProducer<String, WebData> producer;
     private final List<String> pagePaths;
     private final Random random;
+    private final Set<String> userIds;
 
     // Constructor
-    public WebDataProducer() {
-        this.faker = new Faker();
+    public WebDataProducer(long seed, int numberOfUsers) {
+        this.faker = new Faker(new Random(seed));
         this.producer = KafkaProducerConfig.createWebDataProducer();
-        this.pagePaths = List.of(
+        this.pagePaths = Arrays.asList(
                 "/cart",
                 "/home",
                 "/category",
@@ -31,32 +30,53 @@ public class WebDataProducer {
                 "/product_detail"
         );
         this.random = new Random();
+        this.userIds = generateUserIds(numberOfUsers);
     }
 
     // Main method
     public static void main(String[] args) {
 
+        long seed = 12345L;
+        int numberOfUsers = 5;
+        int numberOfEvents = 50;
+
         // Create a new instance of the WebDataProducer class
-        WebDataProducer webDataProducer = new WebDataProducer();
+        WebDataProducer webDataProducer = new WebDataProducer(seed, numberOfUsers);
 
         // Generate a new WebData object
-        WebData webData = webDataProducer.generateWebData();
-        System.out.println(webData.toString());
+        for (int i = 0; i < numberOfEvents; i++) {
+            WebData webData = webDataProducer.generateWebData();
+            System.out.println(webData.toString());
 
-        // Send the generated webdata to Kafka
-        webDataProducer.sendToKafka(webData);
+            // Send the generated webdata to Kafka
+            webDataProducer.sendToKafka(webData);
+        }
+
+    }
+
+    private Set<String> generateUserIds(int numberOfUsers) {
+        Set<String> userIds = new HashSet<>();
+        while (userIds.size() < numberOfUsers) {
+            userIds.add(faker.idNumber().valid());
+        }
+        return userIds;
     }
 
     public WebData generateWebData() {
         WebData webData = new WebData();
-        webData.userId = faker.idNumber().valid();
+        webData.userId = getRandomUserId();
         webData.sessionId = faker.idNumber().valid();
         webData.timestamp = System.currentTimeMillis();
-        webData.sessionDuration = faker.number().numberBetween(1, 1000);
+        webData.sessionDurationSeconds = faker.number().numberBetween(1, 1000);
         webData.pageViews = generatePageViews(faker.number().numberBetween(1, 10));
         webData.cartActivity = new WebData.CartActivity();
         webData.cartActivity.itemsAdded = generateItemsAdded(faker.number().numberBetween(1, 10));
         return webData;
+    }
+
+    private String getRandomUserId() {
+        int index = random.nextInt(userIds.size());
+        return userIds.toArray(new String[0])[index];
     }
 
     private ArrayList<WebData.PageView> generatePageViews(int numPageViews) {
@@ -75,6 +95,7 @@ public class WebDataProducer {
 
         for (int i = 0; i < numItemsAdded; i++) {
             WebData.ItemAdded itemAdded = new WebData.ItemAdded();
+            itemAdded.timestamp = System.currentTimeMillis();
             itemAdded.productId = faker.idNumber().valid();
             itemAdded.quantity = faker.number().numberBetween(1, 10);
             itemsAdded.add(itemAdded);
